// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitHubRelease generateReleaseNotes should allow user to configure section headings 1`] = `
"#### 💥  Breaking Change

- First [#1234](https://github.com/web/site/pull/1234) (adam@dierkens.com)

#### 🚀  Enhancement

- Second [#1235](https://github.com/web/site/pull/1235) (adam@dierkens.com)

#### 🐛  Bug Fix

- Fourth [#1237](https://github.com/web/site/pull/1237) (adam@dierkens.com)

#### 🏠  Internal

- Third [#1236](https://github.com/web/site/pull/1236) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`GitHubRelease getCommits should ignore rebased commits if no last release 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": undefined,
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
]
`;

exports[`GitHubRelease getCommits should match rebased commits to PRs 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": undefined,
    "packages": undefined,
    "pullRequest": Object {
      "number": 124,
    },
    "subject": "Feature",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "1a2b",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "I was rebased",
  },
]
`;

exports[`GitHubRelease getCommits should match rebased commits to PRs with first commit 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": undefined,
    "packages": undefined,
    "pullRequest": Object {
      "number": 124,
    },
    "subject": "Feature",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "1a2b",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "I was rebased",
  },
]
`;

exports[`GitHubRelease getCommits should resolve authors with PR commits 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "login": "adam",
        "name": "Adam Dierkens",
        "username": "adam",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "subject": "First",
  },
  Object {
    "authorEmail": "lisowski54@gmail.com",
    "authorName": "Andrew Lisowski",
    "authors": Array [
      Object {
        "login": "andrew",
        "name": "Andrew Lisowski",
        "username": "andrew",
      },
    ],
    "hash": "foo",
    "labels": undefined,
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "login": "adam",
        "name": "Adam Dierkens",
        "username": "adam",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "subject": "Third",
  },
]
`;
